--- a/src/app/components/form-vertical/form-vertical.component.css
+++ b/src/app/components/form-vertical/form-vertical.component.css
@@ -2,9 +2,48 @@
 .phone-col {
   background: #e6e7ee;
   overflow-y: hidden;
-  border-radius: 2rem;
+  border-radius: 2rem 2rem 2rem 2rem;
   border: 0.10rem solid #d1d9e6;
-  padding: 24px;
-  height: 100%;
+  padding: 24px 0px 24px 0px;
+  height: 56.9rem;
 }
 
+.history-header{
+  padding: 0px 24px 0px 24px;
+
+}
+
+.button-inline{
+
+  margin: 0rem 0rem  1rem 0rem;
+  padding: 0rem .44rem  0rem .44rem;
+  width: 100%;
+}
+
+.toggle-neumorphism-label {
+
+  padding-right: 1rem;
+}
+
+.width-container{
+
+  width: 100%;
+}
+
+#input-call-at{
+
+  margin-left: 0.5rem;
+  border-radius: .55rem;
+
+}
+
+.history-log{
+  height: 36.9rem;
+  overflow-y: scroll;
+  padding: 0px 24px 0px 24px;
+}
+
+.show{
+
+  display: none;
+}
