--- a/src/app/components/history/historial.component.css
+++ b/src/app/components/history/historial.component.css
@@ -1,9 +1,9 @@
 .notes-container-col{
   background: #e6e7ee;
-  overflow-y: scroll;
-  border-radius: 2rem;
+  overflow-y: auto;
+  border-radius: 2rem 0rem 0rem 2rem;
   border: 0.10rem solid #d1d9e6;
-  height: 25%;
+  height: 28rem;
 
 }
 
@@ -12,17 +12,19 @@
 }
 
 .inherit-row {
-  margin: 1.5rem 0rem 2rem 0rem;
+  margin: 1.5rem 0rem 0rem 0rem;
 }
 
 #input-note{
-  margin-top: 1rem;
+  margin-top: .55rem;
   max-height: 20rem;
+  display: flex;
+
 }
 
-.button-neumorphism {
+.btnsave-container {
 
-  margin-top: 1rem;
-  height: 80%;
+  margin-top: .55rem;
+  display: flex;
 
 }
