--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@ html{
     background-color: #e6e7ee; 
     font-size: 0.90rem;
     height: 100%;
+    overflow-y: auto;
  } 
 
 body{
@@ -16,4 +17,35 @@ body{
     height: 100%;
 } 
 
+/* width */
+::-webkit-scrollbar {
+    width: 0.3rem;
+    border-radius: 2rem;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #cfcfd6; 
+    border-radius: 2rem;
 
+}
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #cfcfd6; 
+    border-radius: 2rem;
+
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #b8b9be; 
+    border-radius: 2rem;
+
+  }
+
+  input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+-webkit-appearance: none;
+margin: 0;
+}
