--- a/src/app/partials/queue/queue.component.html
+++ b/src/app/partials/queue/queue.component.html
@@ -1,6 +1,43 @@
-<!-- Tab panes -->
-<div class="container">
-  <br />
-  <h3>Title</h3>
-  <p>Queue</p>
+<div class="row main-row">
+  <div class="col-12">
+    <h1>Queue</h1>
+    <hr><br />
+    <div class="table-container">
+      <div>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="mrn">
+      <th mat-header-cell *matHeaderCellDef> MRN </th>
+      <td mat-cell *matCellDef="let element"> {{element.mrn}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="dob">
+      <th mat-header-cell *matHeaderCellDef> DOB </th>
+      <td mat-cell *matCellDef="let element"> {{element.dob}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="tier">
+      <th mat-header-cell *matHeaderCellDef> Tier </th>
+      <td mat-cell *matCellDef="let element"> {{element.tier}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="prior_contact">
+      <th mat-header-cell *matHeaderCellDef> Prior contact </th>
+      <td mat-cell *matCellDef="let element"> {{element.prior_contact}} </td>
+    </ng-container>
+    <ng-container matColumnDef="pending">
+      <th mat-header-cell *matHeaderCellDef> Pending </th>
+      <td mat-cell *matCellDef="let element"> {{element.pending}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
+    </div>
+  </div>
+</div> 
