--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -1,4 +1,3 @@
-
 .input-neumorphism {
   padding: .6rem .75rem;
   color: #44476a;
@@ -14,15 +13,12 @@
 
 .input-neumorphism:hover,
 .input-neumorphism:focus {
-
-    outline: 0;
-    box-shadow: none;
-
+  outline: 0;
+  box-shadow: none;
 }
 
 .iconbutton-neumorphism {
   background-color: #e6e7ee;
-
   float: right;
   padding-top: 0.5rem;
   text-align: center;
@@ -31,34 +27,31 @@
   height: 2.5rem;
   border-radius: 2rem;
   border: .0625rem solid #d1d9e6;
-    box-shadow: 2px 2px 5px #b8b9be;
-
+  box-shadow: 2px 2px 5px #b8b9be;
 }
 
 .iconbutton-neumorphism:hover,
 .iconbutton-neumorphism:focus {
-
-    outline: 0;
-    animation: pulse 3s infinite;
+  outline: 0;
+  animation: pulse 3s infinite;
 }
 
-
 @keyframes pulse {
-    0% {
-        box-shadow: 0 0 0 0 rgba(141, 144, 181, 0.7);
-    }
+  0% {
+    box-shadow: 0 0 0 0 rgba(141, 144, 181, 0.7);
+  }
 
-    70% {
-        box-shadow: 0 0 0 .2rem rgba(0, 0, 0, 0);
-    }
+  70% {
+    box-shadow: 0 0 0 .2rem rgba(0, 0, 0, 0);
+  }
 
-    100% {
-        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-    }
+  100% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
 }
 
 .i-neumorphism {
-    color: #31344b;
+  color: #31344b;
 }
 
 .button-neumorphism {
@@ -75,80 +68,111 @@
 
 .button-neumorphism:hover,
 .button-neumorphism:focus {
-
   box-shadow: inset 2px 2px 5px #b8b9be;
   animation: pulse 3s infinite;
   outline: none;
 }
 
 .toggle-neumorphism {
-    position: relative;
-    width: 4rem;
-    height: 2rem;
-  }
-  
-  .toggle-neumorphism input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .toggle-slider-neumorphism {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    transition: .4s;
-    box-shadow: 3px 3px 6px #b8b9be;
-    border: .0625rem solid #d1d9e6;
-    background-color: #e6e7ee;  
-  }
-  
+  position: relative;
+  width: 4rem;
+  height: 2rem;
+}
 
-  
-  .toggle-slider-neumorphism::before {
-    position: absolute;
-    content: "";
-    height: 1.3rem;
-    width: 1.3rem;
-    left: 0.5rem;
-    bottom: 0.2rem;
-    background-color: #b1bcce;
+.toggle-neumorphism input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
 
-    transition: .4s;
-  }
+.toggle-slider-neumorphism {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: .4s;
+  box-shadow: 3px 3px 6px #b8b9be;
+  border: .0625rem solid #d1d9e6;
+  background-color: #e6e7ee;
+}
 
-  input:checked + .toggle-slider-neumorphism {
-    background-color: #e6e7ee;
-    box-shadow: inset 2px 2px 5px #b8b9be;
-  
-  
-  }
-  
-  
-  input:checked + .toggle-slider-neumorphism::before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-    background-color: #31344b;
+.toggle-slider-neumorphism::before {
+  position: absolute;
+  content: "";
+  height: 1.3rem;
+  width: 1.3rem;
+  left: 0.5rem;
+  bottom: 0.2rem;
+  background-color: #b1bcce;
+  transition: .4s;
+}
 
-  }
-  
-  /* Rounded toggle-slider-neumorphisms */
-  .toggle-slider-neumorphism.toggle-round-neumorphism {
-    border-radius: 1rem;
+input:checked+.toggle-slider-neumorphism {
+  background-color: #e6e7ee;
+  box-shadow: inset 2px 2px 5px #b8b9be;
+}
 
-  }
+input:checked+.toggle-slider-neumorphism::before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+  background-color: #31344b;
+}
 
-  .toggle-slider-neumorphism.toggle-round-neumorphism:hover{
-    animation: pulse 3s infinite;
+.toggle-slider-neumorphism.toggle-round-neumorphism {
+  border-radius: 1rem;
+}
 
-  }
-  
-  
-  .toggle-slider-neumorphism.toggle-round-neumorphism::before {
-    border-radius: 50%;
+.toggle-slider-neumorphism.toggle-round-neumorphism:hover {
+  animation: pulse 3s infinite;
+}
 
-  }
+.toggle-slider-neumorphism.toggle-round-neumorphism::before {
+  border-radius: 50%;
+}
+
+.mat-table {
+  width: 100%;
+  color: #44476A;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: .55rem !important;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
+}
+
+th.mat-header-cell {
+  font-weight: bold;
+}
+
+th.mat-header-cell,
+td.mat-cell,
+td.mat-footer-cell {
+  color: #44476A;
+  text-align: center !important;
+}
+
+tr.mat-row:hover {
+  border-top: .0625rem solid #D1D9E6;
+}
+
+tr.mat-row:hover {
+  background-color: rgba(38, 40, 51, 0.03);
+  transition: all 0.2s ease;
+}
+
+.mat-icon-button,
+.mat-button {
+  background: none;
+  background-color: transparent;
+}
+
+.mat-paginator {
+  margin-top: 1rem;
+  background-color: #e6e7ee;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
