--- a/src/app/partials/queue/queue.component.html
+++ b/src/app/partials/queue/queue.component.html
@@ -4,40 +4,33 @@
     <hr><br />
     <div class="table-container">
       <div>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
 
-    <ng-container matColumnDef="mrn">
-      <th mat-header-cell *matHeaderCellDef> MRN </th>
-      <td mat-cell *matCellDef="let element"> {{element.mrn}} </td>
-    </ng-container>
+        <mat-form-field appearance="standard">
+          <mat-label>Filter</mat-label>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+        </mat-form-field>
 
-    <ng-container matColumnDef="dob">
-      <th mat-header-cell *matHeaderCellDef> DOB </th>
-      <td mat-cell *matCellDef="let element"> {{element.dob}} </td>
-    </ng-container>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
+            <th mat-header-cell *matHeaderCellDef>
+              {{column.header}}
+            </th>
+            <td mat-cell *matCellDef="let row">
+              {{column.cell(row)}}
+            </td>
+          </ng-container>
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="6">No data matching the filter "{{input.value}}"</td>
+          </tr>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
 
-    <ng-container matColumnDef="tier">
-      <th mat-header-cell *matHeaderCellDef> Tier </th>
-      <td mat-cell *matCellDef="let element"> {{element.tier}} </td>
-    </ng-container>
+        <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page"
+          showFirstLastButtons>
+        </mat-paginator>
 
-    <ng-container matColumnDef="prior_contact">
-      <th mat-header-cell *matHeaderCellDef> Prior contact </th>
-      <td mat-cell *matCellDef="let element"> {{element.prior_contact}} </td>
-    </ng-container>
-    <ng-container matColumnDef="pending">
-      <th mat-header-cell *matHeaderCellDef> Pending </th>
-      <td mat-cell *matCellDef="let element"> {{element.pending}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-</div>
+      </div>
     </div>
   </div>
-</div> 
+</div>
