--- a/src/app/partials/settings/settings.component.html
+++ b/src/app/partials/settings/settings.component.html
@@ -5,17 +5,94 @@
     <div class="row">
       <div class="col-4 ">
         <div class="caller-information-col">
-          <h1>sms-messages</h1>
+          <h4>Voice mails</h4>
+          <div class="form-check form-check-inline width-100">
+            <label class="margin-right width-100">VM (Name)</label>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Listen" matTooltipPosition="above">
+              <i class="bi bi-headset i-neumorphism"></i>
+            </button>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Record" matTooltipPosition="above">
+              <i class="bi bi-mic-fill i-neumorphism"></i>
+            </button>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Delete" matTooltipPosition="above">
+              <i class="bi bi-trash-fill i-neumorphism"></i>
+            </button>
+          </div>
+          <hr>
         </div>
       </div>
       <div class="col-4 ">
         <div class="caller-information-col">
-          <h1>emails</h1>
+          <h4>Text Messages</h4>
+          <div class="form-check form-check-inline width-100">
+            <label class="margin-right width-100">SMS (Name)</label>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Preview" matTooltipPosition="above">
+              <i class="bi bi-chat-left-text i-neumorphism"></i>
+            </button>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Edit" matTooltipPosition="above">
+              <i class="bi bi-pencil-square i-neumorphism"></i>
+            </button>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Delete" matTooltipPosition="above">
+              <i class="bi bi-trash-fill i-neumorphism"></i>
+            </button>
+          </div>
+          <hr>
+          <div class="form-check form-check-inline width-100">
+            <label class="margin-right width-100">SMS (Name)</label>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Preview" matTooltipPosition="above">
+              <i class="bi bi-chat-left-text i-neumorphism"></i>
+            </button>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Edit" matTooltipPosition="above">
+              <i class="bi bi-pencil-square i-neumorphism"></i>
+            </button>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Delete" matTooltipPosition="above">
+              <i class="bi bi-trash-fill i-neumorphism"></i>
+            </button>
+          </div>
+          <hr>
+          <div class="form-check form-check-inline width-100">
+            <label class="margin-right width-100">SMS (Name)</label>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Preview" matTooltipPosition="above">
+              <i class="bi bi-chat-left-text i-neumorphism"></i>
+            </button>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Edit" matTooltipPosition="above">
+              <i class="bi bi-pencil-square i-neumorphism"></i>
+            </button>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Delete" matTooltipPosition="above">
+              <i class="bi bi-trash-fill i-neumorphism"></i>
+            </button>
+          </div>
+          <hr>
         </div>
       </div>
       <div class="col-4 ">
         <div class="caller-information-col">
-          <h1>voice-mail</h1>
+          <h4>Emails</h4>
+          <div class="form-check form-check-inline width-100">
+            <label class="margin-right width-100">Email (Name)</label>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Preview" matTooltipPosition="above">
+              <i class="bi bi-card-text i-neumorphism"></i>
+            </button>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Edit" matTooltipPosition="above">
+              <i class="bi bi-pencil-square i-neumorphism"></i>
+            </button>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Delete" matTooltipPosition="above">
+              <i class="bi bi-trash-fill i-neumorphism"></i>
+            </button>
+          </div>
+          <hr>
+          <div class="form-check form-check-inline width-100">
+            <label class="margin-right width-100">Email (Name)</label>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Preview" matTooltipPosition="above">
+              <i class="bi bi-card-text i-neumorphism"></i>
+            </button>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Edit" matTooltipPosition="above">
+              <i class="bi bi-pencil-square i-neumorphism"></i>
+            </button>
+            <button class="mini-iconbutton-neumorphism" matTooltip="Delete" matTooltipPosition="above">
+              <i class="bi bi-trash-fill i-neumorphism"></i>
+            </button>
+          </div>
         </div>
       </div>
     </div>
