--- a/src/app/components/form-vertical/form-vertical.component.css
+++ b/src/app/components/form-vertical/form-vertical.component.css
@@ -1,4 +1,3 @@
-
 .phone-col {
   background: #e6e7ee;
   overflow-y: hidden;
@@ -10,31 +9,17 @@
 
 .history-header{
   padding: 0px 24px 0px 24px;
-
 }
 
 .button-inline{
-
   margin: 0rem 0rem  1rem 0rem;
   padding: 0rem .44rem  0rem .44rem;
   width: 100%;
 }
 
-.toggle-neumorphism-label {
-
-  padding-right: 1rem;
-}
-
-.width-container{
-
-  width: 100%;
-}
-
-#input-call-at{
-
+.iconbutton-neumorphism.btnCall{
   margin-left: 0.5rem;
   border-radius: .55rem;
-
 }
 
 .history-log{
@@ -43,7 +28,50 @@
   padding: 0px 24px 0px 24px;
 }
 
-.show{
+.align-right{
+  float: right;
+}
 
+h6, p {
+  margin: 0;
+}
+
+.container-neumorphism{
+  padding: 1rem;
+  border-radius: .55em;
+  border: .0625rem solid #d1d9e6;
+  color: #44476a;
+  background-color: #e6e7ee;
+  box-shadow: 2px 2px 5px #b8b9be;
+  margin-bottom: 1rem;
+  animation: pulse 3s infinite;
+}
+
+.container-neumorphism:hover, 
+.container-neumorphism:focus{
+  background-color: rgba(38, 40, 51, 0.03);
+}
+
+.margin-right{
+  margin-right: 1rem;
+}
+
+.border-bottom{
+  padding-bottom: .44rem !important;
+  border-bottom: .0625rem solid #d1d9e6 !important;
+  margin-bottom: .44rem;
+}
+
+.change-on-hold{
+  background-color: rgba(38, 40, 51, 0.03);
+  color: #c5c6cb;
+}
+
+.show{
+  display: inline;
+}
+
+.hide{
   display: none;
+  background-color: rgba(38, 40, 51, 0.03);
 }
