--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -17,6 +17,27 @@
   box-shadow: none;
 }
 
+.mini-input-neumorphism{
+  padding: .55rem;
+  color: #44476a;
+  background-color: #e6e7ee;
+  border: .0625rem solid #d1d9e6;
+  transition: all .3s ease-in-out;
+  border-radius: .55rem;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  overflow-wrap: break-word;
+  -webkit-appearance: none;
+  width: 100%;
+  height: 2rem;
+  font-size: small;
+}
+
+.mini-input-neumorphism:hover,
+.mini-input-neumorphism:focus {
+  outline: 0;
+  box-shadow: none;
+}
+
 .iconbutton-neumorphism {
   background-color: #e6e7ee;
   float: right;
@@ -34,6 +55,27 @@
 .iconbutton-neumorphism:focus {
   outline: 0;
   animation: pulse 3s infinite;
+  background-color: rgba(38, 40, 51, 0.03);
+}
+
+.mini-iconbutton-neumorphism{
+  text-align: center;
+  border-radius: .55em;
+  border: .0625rem solid #d1d9e6;
+  color: #44476a;
+  background-color: #e6e7ee;
+  transition: all .3s ease-in-out;
+  overflow-wrap: break-word;
+  margin-left: 0.5rem;
+  height: 100%;
+  width: 20%;
+}
+
+.mini-iconbutton-neumorphism:hover,
+.mini-iconbutton-neumorphism:focus {
+  outline: 0;
+  animation: pulse 3s infinite;
+  background-color: rgba(38, 40, 51, 0.03);
 }
 
 @keyframes pulse {
@@ -73,6 +115,25 @@
   outline: none;
 }
 
+.button-neumorphism-disabled{
+  padding: 0.55rem 0.55rem 0.55rem 0.55rem;
+  text-align: center;
+  border-radius: .55em;
+  border: .0625rem solid #d1d9e6;
+  color: #44476a;
+  background-color: #e6e7ee;
+  transition: all .3s ease-in-out;
+  overflow-wrap: break-word;
+}
+
+.button-neumorphism-disabled:hover,
+.button-neumorphism-disabled:focus {
+  box-shadow: inset 2px 2px 5px #b8b9be;
+  background-color: rgba(38, 40, 51, 0.03);
+  animation: pulse 3s infinite;
+  outline: none;
+}
+
 .toggle-neumorphism {
   position: relative;
   width: 4rem;
@@ -93,9 +154,12 @@
   right: 0;
   bottom: 0;
   transition: .4s;
-  box-shadow: 3px 3px 6px #b8b9be;
   border: .0625rem solid #d1d9e6;
   background-color: #e6e7ee;
+}
+
+.toggle-neumorphism-label {
+  padding-right: 1rem;
 }
 
 .toggle-slider-neumorphism::before {
@@ -104,7 +168,7 @@
   height: 1.3rem;
   width: 1.3rem;
   left: 0.5rem;
-  bottom: 0.2rem;
+  bottom: 0.3rem;
   background-color: #b1bcce;
   transition: .4s;
 }
@@ -131,6 +195,14 @@ input:checked+.toggle-slider-neumorphism::before {
 
 .toggle-slider-neumorphism.toggle-round-neumorphism::before {
   border-radius: 50%;
+}
+
+.toggle-label{
+  vertical-align: -.1em;
+  padding-left: .55rem;
+  font-size: smaller;
+  color: #44476a;
+  font-weight: bold;
 }
 
 .mat-table {
@@ -176,3 +248,4 @@ tr.mat-row:hover {
   font-size: 14px;
   width: 100%;
 }
+
