--- a/src/app/partials/statistics/statistics.component.css
+++ b/src/app/partials/statistics/statistics.component.css
@@ -2,29 +2,16 @@
     margin-left: 9rem;
     margin-right: 1rem;
     margin-top: 2.5rem;
+    height: 57rem;
 }
 
-.caller-information-col,
-.notes-container-col,
-.phone-col {
+.caller-information-col {
     background: #e6e7ee;
-    overflow: hidden;
+    overflow-y: hidden;
     border-radius: 2rem;
     border: 0.10rem solid #d1d9e6;
-
-}
-
-.caller-information-col,
-.notes-container-col {
+  }
+  
+  .caller-information-col{
     padding: 1.5rem;
-}
-
-.phone-col {
-    padding: 24px;
-    height: 100%;
-}
-
-.inherit-row {
-    margin: 1.5rem 0rem 2rem 0rem;
-}
-
+  }
