--- a/src/styles.css
+++ b/src/styles.css
@@ -2,60 +2,78 @@
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 html{ 
-    background-color: #e6e7ee; 
-    font-size: 0.90rem;
-    height: 100%;
-    overflow-y: auto;
- } 
+  background-color: #e6e7ee; 
+  font-size: 0.90rem;
+  height: 100%;
+  overflow-y: auto;
+} 
 
 body{
-    height: 100%;
-    background-color: #e6e7ee;   
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-
+  height: 100%;
+  background-color: #e6e7ee;   
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .container-fluid { 
-    background-color: #e6e7ee;   
-    height: 100%;
+  background-color: #e6e7ee;   
+  height: 100%;
 } 
 
-/* width */
 ::-webkit-scrollbar {
-    width: 0.3rem;
-    border-radius: 2rem;
-  }
+  width: 0.3rem;
+  border-radius: 2rem;
+}
   
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #cfcfd6; 
-    border-radius: 2rem;
-
+::-webkit-scrollbar-track {
+  background: #cfcfd6; 
+  border-radius: 2rem;
 }
    
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #cfcfd6; 
-    border-radius: 2rem;
-
-  }
+::-webkit-scrollbar-thumb {
+  background: #b8b9be; 
+  border-radius: 2rem;
+}
   
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #b8b9be; 
-    border-radius: 2rem;
+::-webkit-scrollbar-thumb:hover {
+  background: #b8b9be; 
+  border-radius: 2rem;
+}
 
-  }
-
-  input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
 -webkit-appearance: none;
 margin: 0;
 }
 
-.mat-select-panel{
-  
-  background-color: #e6e7ee;
+.width-100{
+  width: 100%;
+}
 
+.mat-select-panel{
+  background-color: #e6e7ee;
+}
+
+.mat-option-text{
+  color: #44476A;
+}
+
+.mat-option.mat-active{
+  background-color: rgba(38, 40, 51, 0.03) !important;
+}
+
+.mat-form-field.mat-focused .mat-form-field-ripple {
+  background-color: #44476A;
+}
+
+.mat-form-field.mat-focused .mat-form-field-label {
+  color: #44476A;
+}
+
+.mat-form-field.mat-focused.mat-primary .mat-select-arrow {
+  color: #44476A;
+}
+
+.mat-icon-button.mat-button-base{
+  outline: none;
 }
 
