--- a/src/app/partials/call-information/call-information.component.html
+++ b/src/app/partials/call-information/call-information.component.html
@@ -2,10 +2,16 @@
   <div class="col-sm-8 ">
     <h1>Caller information</h1>
     <hr><br>
-    <form-component></form-component>
-    <historial-component></historial-component>
+    <div class="form-col">
+      <form-component></form-component>
+    </div>
+    <div class="row inherit-row">
+      <div class="col-12 log-container-col ">
+        <log-component></log-component>
+      </div>
+    </div>
   </div>
   <div class="col-sm-4">
-    <form-vertical-component></form-vertical-component>
+    <phone-component></phone-component>
   </div>
 </div>
