--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -11,10 +11,14 @@
   width: 100%;
 }
 
-.input-neumorphism:hover,
-.input-neumorphism:focus {
+.input-neumorphism:hover {
   outline: 0;
   box-shadow: none;
+}
+
+.input-neumorphism:focus {
+  outline: 0;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
 }
 
 .mini-input-neumorphism{
@@ -38,9 +42,14 @@
   box-shadow: none;
 }
 
+.iconbutton-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
 .iconbutton-neumorphism {
   background-color: #e6e7ee;
-  float: right;
   padding-top: 0.5rem;
   text-align: center;
   margin: 0;
@@ -78,20 +87,6 @@
   background-color: rgba(38, 40, 51, 0.03);
 }
 
-@keyframes pulse {
-  0% {
-    box-shadow: 0 0 0 0 rgba(141, 144, 181, 0.7);
-  }
-
-  70% {
-    box-shadow: 0 0 0 .2rem rgba(0, 0, 0, 0);
-  }
-
-  100% {
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-  }
-}
-
 .i-neumorphism {
   color: #31344b;
 }
@@ -106,6 +101,8 @@
   transition: all .3s ease-in-out;
   overflow-wrap: break-word;
   box-shadow: 2px 2px 5px #b8b9be;
+  font-weight: 600;
+  font-size: 1rem;
 }
 
 .button-neumorphism:hover,
@@ -195,6 +192,7 @@ input:checked+.toggle-slider-neumorphism::before {
 
 .toggle-slider-neumorphism.toggle-round-neumorphism::before {
   border-radius: 50%;
+  
 }
 
 .toggle-label{
@@ -248,4 +246,3 @@ tr.mat-row:hover {
   font-size: 14px;
   width: 100%;
 }
-
