--- a/src/app/partials/call-information/call-information.component.css
+++ b/src/app/partials/call-information/call-information.component.css
@@ -1,6 +1,39 @@
+.row{
+  margin-right: 0;
+  margin-left: 0;
+}
+
 .main-row {
   margin-left: 9rem;
   margin-right: 1rem;
   margin-top: 2.5rem;
   height: 57rem;
 }
+
+.form-col {
+  background: #e6e7ee;
+  overflow-y: hidden;
+  border-radius: 2rem;
+  border: 0.10rem solid #d1d9e6;
+  padding: 1.5rem;
+  min-width: 28rem;
+}
+
+.log-container-col {
+  background: #e6e7ee;
+  overflow-y: auto;
+  overflow-x: hidden;
+  border-radius: 2rem 0rem 0rem 2rem;
+  border: 0.10rem solid #d1d9e6;
+  height: 28rem;
+  padding:  1.5rem 0rem 1.5rem 0rem; 
+  min-width: 28rem;
+}
+
+.inherit-row {
+  margin: 1.5rem 0rem 1.5rem 0rem;
+  min-width: 28rem;
+}
+
+
+
