--- a/src/app/partials/queue/queue.component.html
+++ b/src/app/partials/queue/queue.component.html
@@ -2,31 +2,6 @@
   <div class="col-12">
     <h1>Queue</h1>
     <hr><br />
-    <div class="table-container">
-        <mat-form-field appearance="standard">
-          <mat-label>Filter</mat-label>
-          <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-        </mat-form-field>
-
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-          <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
-            <th mat-header-cell *matHeaderCellDef>
-              {{column.header}}
-            </th>
-            <td mat-cell *matCellDef="let row">
-              {{column.cell(row)}}
-            </td>
-          </ng-container>
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="6">No data matching the filter "{{input.value}}"</td>
-          </tr>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-
-        <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page"
-          showFirstLastButtons>
-        </mat-paginator>
-    </div>
+    <table-component></table-component>
   </div>
 </div>
