--- a/src/styles.css
+++ b/src/styles.css
@@ -89,3 +89,52 @@ margin: 0;
   outline: none;
 }
 
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(141, 144, 181, 0.7);
+  }
+
+  70% {
+    box-shadow: 0 0 0 .2rem rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
+
+@keyframes rotate {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+}
+
+.mat-tooltip {
+  color: #44476A !important;
+  font-weight: bold;
+  background-color: #e6e7ee;
+  border: .0625rem solid #d1d9e6;
+  transition: all .2s ease-in-out;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+}
+
+.show{
+  display: inline;
+}
+
+.hide{
+  display: none;
+  background-color: rgba(38, 40, 51, 0.03);
+}
+
+.margin-right{
+  margin-right: 1rem;
+}
+
+.margin-left{
+  margin-left: 1rem;
+}
+
+.input-disabled-neumorphism{
+  outline: 0 !important;
+  box-shadow: none !important;
+}
